# ashlang

./: .gitattributes  .gitignore  .rust-analyzer.toml  Cargo.toml  LICENSE  README.md  demo.ash  test.ash  test.sh
.circleci/: config.yml
.github/workflows/: build-and-test.yml
ashlang/: Cargo.toml
ashlang/benchmarks/: 1024_mul.ash
ashlang/examples/: matmul.rs
ashlang/src/: cli.rs  compiler.rs  grammar.pest  lib.rs  main.rs  parser.rs  rings.rs  test.ash  time.rs
ashlang/src/provers/: README.md  ashlang_prover.rs  mod.rs  spartan.rs  tritonvm.rs
ashlang/src/r1cs/: README.md  ar1cs_parser.rs  arithm.rs  constraint.rs  constraint_generator.rs  mod.rs  optimizer.rs  parser.rs  r1cs_grammar.pest  var.rs  vm.rs  witness.rs
ashlang/src/tasm/: mod.rs  vm.rs
ashlang/stdlib/: add.ash  crash.ar1cs  crash.tasm  mat_index.ash  mod.ash  poseidon.ash  pow.ash  pow11.ash
ashlang/stdlib/chacha/: chacha.ash  chacha_quarter.ash
ashlang/stdlib/hash/: poseidon_milli_200.ash  poseidon_milli_200.rs  poseidon_milli_200_mix.ash
ashlang/stdlib/io/: input_len.ash  read.ash  read_public_input.tasm  write_output.ar1cs
ashlang/stdlib/u32/: gt.tasm  lte.tasm  shl.tasm  shr.tasm  upper32.tasm
ashlang/test-vectors/: chacha_test.ash  io_test.ash  mat_math_test.ash  mem_alloc.ash  mem_fn.ash  mem_fn_test.ash  ooo_test.ash  polynomial_r1cs_test.ash  r1cs_readme.ash  r1cs_test.ash  u32_test.ash  vec_assign_test.ash
benchmarks/: 1024_mul.ash  pow5_assign.ash
examples/: poseidon.ash  poseidon.sh  pow5.sh  sum.sh
examples/bls12_381/: poseidon_c.ash  poseidon_c.sh  poseidon_m.ash  poseidon_m.sh
language-research/: README.md
language-research/r1cs/: README.md
ring-math/: Cargo.toml  README.md
ring-math/src/: lib.rs  matrix.rs  matrix2d.rs  norms.rs  polynomial.rs  polynomial_ring.rs  ring_polynomial.rs  vector.rs
src/: asm_parser.rs  assert.ash  cli.rs  compiler.rs  folding.rs  grammar.pest  helloworld.ash  lib.rs  log.rs  main.rs  parser.rs  tasm_grammar.pest  test.ash  vm.rs
src/compiler/: mod.rs  vm.rs
src/math/: alt_bn128.rs  curve_25519.rs  field_254.rs  field_64.rs  foi.rs  matrix.rs  mod.rs
src/parser/: grammar.pest  mod.rs
src/provers/: README.md  ashlang_prover.rs  mod.rs  spartan.rs  tritonvm.rs
src/r1cs/: README.md  constraint.rs  inv.rs  mod.rs  parser.rs  r1cs_grammar.pest  solver.rs  vm.rs  witness.rs
src/tasm/: asm_parser.rs  vm.rs
stdlib/: addv.ash  assert_eq.ar1cs  assert_eq.r1cs  assert_eq.tasm  crash.ar1cs  crash.tasm  mod.ash  mul.ash  poseidon.ash  pow5.ash  pow5_static.ash  sqrt.ar1cs  sum.ash
stdlib/chacha/: chacha.ash  chacha_quarter.ash
stdlib/io/: read_public_input.ar1cs  read_public_input.tasm  read_secret_input.ar1cs  read_secret_input.tasm  write_output.ar1cs  write_output.tasm
stdlib/u32/: and.tasm  gt.tasm  gte.tasm  lower32.ash  lower32.tasm  lt.tasm  lte.tasm  shl.tasm  shlc.tasm  shr.tasm  upper32.tasm  xor.tasm
test-vectors/: asm_mem_fn.tasm  chacha_test.ash  if_assignment.ash  if_assignment_test.ash  io_test.ash  loop_test.ash  mat_math.ash  mat_math_test.ash  mem_alloc.ash  mem_fn.ash  mem_fn2.ash  pow5_test.ash  r1cs_test.ash  vec_assign_test.ash
