[package]
name = "ashlang"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]

# misc
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"

# provers
triton-vm = "=0.41.0"

# math
scalarff = "0.1.1"
