[package]
name = "ashlang"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "ashlang"
required-features = ["prove"]

[features]
prove = ["ashlang-spartan", "triton-vm"]

[dependencies]

# misc
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"

# provers
triton-vm = { version = "=0.41.0", optional = true }
#ashlang-spartan = { path = "../ashlang-spartan" }
ashlang-spartan = { git = "https://github.com/chancehudson/ashlang-spartan.git", optional = true }

# math
#scalarff = { path = "../scalarff" }
scalarff = "0.2.1"
