[package]
name = "ashlang"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "ashlang"
required-features = ["default"]

[features]
default = ["tritonvm-prover", "spartan-prover"]
tritonvm-prover = ["triton-vm"]
spartan-prover = ["curve25519-dalek", "merlin", "spartan"]

[dependencies]

# misc
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"

# provers
triton-vm = { version = "=0.41.0", optional = true }

# math
#scalarff = { path = "../scalarff" }
scalarff = "0.3.0"

# spartan
curve25519-dalek = { version = "4.1.3", optional = true }
merlin = { version = "3.0.0", optional = true }
spartan = { version = "0.8.0", default-features = false, optional = true }
