[package]
name = "ashlang"
version = "0.0.0"
edition = "2021"
authors = ["Chance Hudson <PSE>"]
description = "A language for zero knowledge proofs"
homepage = "https://github.com/chancehudson/ashlang"
repository = "https://github.com/chancehudson/ashlang"
license = "MIT OR Apache-2.0"

[lib]

[[bin]]
name = "acc"
path = "src/main.rs"
required-features = ["default"]

[features]
default = ["tritonvm-prover", "spartan-prover"]
tritonvm-prover = ["triton-vm"]
spartan-prover = ["curve25519-dalek", "merlin", "spartan"]

[dependencies]

# local
#ring-math = { path = "../ring-math" }
ring-math = { version = "0.1.0" }

# misc
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"

# provers
triton-vm = { version = "=0.41.0", optional = true }

# math
#scalarff = { path = "../scalarff" }
scalarff = "0.5.1"

# spartan
curve25519-dalek = { version = "4.1.3", optional = true }
merlin = { version = "3.0.0", optional = true }
spartan = { version = "0.8.0", default-features = false, optional = true }
