[package]
name = "ashlang"
version = "0.1.3"
edition = "2024"
authors = ["Chance Hudson"]
description = "A language for zero knowledge arguments"
homepage = "https://github.com/chancehudson/ashlang"
repository = "https://github.com/chancehudson/ashlang"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]

[[bin]]
name = "acc"
path = "src/main.rs"
required-features = ["default"]

[[example]]
name = "matmul"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]

# misc
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"
serde = { version = "1.0.130", features = ["derive"], optional = true }

chrono = "0"

# lettuce = "0"
#lettuce = { path = "../../lattices/lettuce" }
lettuce = { git = "https://github.com/chancehudson/lattices.git", subdirectory = "lettuce" }
#zkpo = { path = "../../zkpo" }
zkpo = { git = "https://github.com/chancehudson/zkpo.git" }
rand = "0.9.2"
