[package]
name = "ring-math"
version = "0.0.0"
edition = "2021"
authors = ["Chance Hudson <PSE>"]
description = "Polynomial ring math over scalar finite fields"
homepage = "https://github.com/chancehudson/ashlang/tree/main/ring-math"
repository = "https://github.com/chancehudson/ashlang/tree/main/ring-math"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
readme = "README.md"

[lib]

[dependencies]
anyhow = "1.0.89"
rand = "0.8.5"
scalarff = { version = "0.4.3", features = ["oxfoi", "alt_bn128", "curve25519", "random"] }
